[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/NPCs/crab2/crab2.png" type="Texture" id=1]
[ext_resource path="res://Assets/NPCs/crab2/crab1.png" type="Texture" id=2]
[ext_resource path="res://Scenes/NPCs/GiantCrab.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Particles/SplatterComponent.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Particles/ParticleSceneCrab.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/NPCs/crab2/crab3.png" type="Texture" id=6]
[ext_resource path="res://Assets/NPCs/crab2/crab4.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 222.25, 3.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 21.5, 62.5 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 11, 35 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 10, 101.938 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 167.5, 99.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 63, 96.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 31.5, 50.9375 )

[node name="GiantCrab" type="KinematicBody2D" groups=["GiantCrab", "NPC"]]
collision_layer = 8
collision_mask = 134
script = ExtResource( 3 )

[node name="SplatterComponent" parent="." instance=ExtResource( 4 )]
particle_scene = ExtResource( 5 )
random_velocity = 3000.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
playing = true

[node name="FloorKinematicCollision" type="CollisionShape2D" parent="."]
position = Vector2( 15.75, 182.5 )
shape = SubResource( 7 )

[node name="WallsKinematicCollision1" type="CollisionShape2D" parent="."]
position = Vector2( 218, 122 )
shape = SubResource( 8 )

[node name="WallsKinematicCollision2" type="CollisionShape2D" parent="."]
position = Vector2( 163, 30 )
shape = SubResource( 9 )

[node name="WallsKinematicCollision3" type="CollisionShape2D" parent="."]
position = Vector2( 293, -103.062 )
shape = SubResource( 10 )

[node name="CollisionArea" type="Area2D" parent="."]
position = Vector2( 0, -1 )
collision_layer = 8
collision_mask = 9

[node name="Collision1" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2( -0.5, 30.5 )
shape = SubResource( 2 )

[node name="Collision5" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2( -234, -101 )
shape = SubResource( 5 )

[node name="Collision6" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2( 232, -100 )
shape = SubResource( 5 )

[node name="Collision3" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2( 199, 125.062 )
shape = SubResource( 6 )

[node name="Collision4" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2( -200, 117.125 )
shape = SubResource( 6 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]

[connection signal="splatta" from="." to="SplatterComponent" method="_on_Crab_splatta"]
[connection signal="body_entered" from="CollisionArea" to="." method="_on_CollisionArea_body_entered"]
